# exmailer

./: .gitignore  .justfile  .pre-commit-config.yaml  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pypi_publish.yml
docs/: index.md  requirements.txt
docs/api/: cli.md  core.md  exceptions.md  templates.md
docs/examples/: batch-sending.md  examples.md  simple-email.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/stylesheets/: extra.css
docs/user-guide/: advanced-features.md  basic-usage.md  cli-reference.md  templates.md
exmailer/: __init__.py  __main__.py  cli.py  config.py  core.py  exceptions.py  templates.py  utils.py
tests/: conftest.py  test_calendar.py  test_cli.py  test_config.py  test_core.py  test_exceptions.py  test_templates.py  test_utils.py
